Select files which have been pasted or dropped

Also clear the previous selection.
BUG: 295389
FIXED-IN: 4.8.2